// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceTypesApi createResourceType() 1: Create non-existing resource type [3ea23a32-ffdf-4a7f-a1f2-5d53fbba9ba6 - FrodoTestResourceType3] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696104687474,
  "description": "Frodo Test Resource Type Three",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696104687474,
  "name": "FrodoTestResourceType3",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "3ea23a32-ffdf-4a7f-a1f2-5d53fbba9ba6",
}
`;

exports[`ResourceTypesApi createResourceType() 2: Create existing resource type [e219144d-8d94-47b6-8789-3a7b820d6cde - FrodoTestResourceType4] 1`] = `
{
  "code": 409,
  "message": "Resource Type e219144d-8d94-47b6-8789-3a7b820d6cde already exists",
  "reason": "Conflict",
}
`;

exports[`ResourceTypesApi deleteResourceType() 1: Delete existing resource type [3d66c934-9bab-4363-973b-f5502245decc - FrodoTestResourceType7] 1`] = `{}`;

exports[`ResourceTypesApi deleteResourceType() 2: Delete non-existing resource type [00000000-0000-0000-0000-000000000000] 1`] = `
{
  "code": 404,
  "message": "Resource Type 00000000-0000-0000-0000-000000000000 does not exist in realm /alpha",
  "reason": "Not Found",
}
`;

exports[`ResourceTypesApi getResourceType() 1: Get existing resource type by uuid [7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2 - FrodoTestResourceType1] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696104686001,
  "description": "Frodo Test Resource Type One",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696104686001,
  "name": "FrodoTestResourceType1",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2",
}
`;

exports[`ResourceTypesApi getResourceType() 2: Get non-existing resource type by uuid [00000000-0000-0000-0000-000000000000] 1`] = `
{
  "code": 404,
  "message": "Resource Type 00000000-0000-0000-0000-000000000000 does not exist in realm /alpha",
  "reason": "Not Found",
}
`;

exports[`ResourceTypesApi getResourceTypeByName() 1: Get existing resource type by name [FrodoTestResourceType2 - ab5fb0da-8fe8-4f48-be05-aba822aa23bb] 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696104686172,
      "description": "Frodo Test Resource Type Two",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696104686172,
      "name": "FrodoTestResourceType2",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "ab5fb0da-8fe8-4f48-be05-aba822aa23bb",
    },
  ],
  "resultCount": 1,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`ResourceTypesApi getResourceTypeByName() 2: Get non-existing resource type by name [DoesNotExist] 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [],
  "resultCount": 0,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`ResourceTypesApi getResourceTypes() 1: Get all resource types 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696104686001,
      "description": "Frodo Test Resource Type One",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696104686001,
      "name": "FrodoTestResourceType1",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147077,
      "description": "Frodo Test Resource Type Eleven",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091865622,
      "name": "FrodoTestResourceType11",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "993eba78-1c3f-4f27-b205-b4b29418f831",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147204,
      "description": "Frodo Test Resource Type Twelve",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091865771,
      "name": "FrodoTestResourceType12",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3fc799d7-b73f-49e0-a70b-e37990e54e56",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147346,
      "description": "Frodo Test Resource Type Thirteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091865910,
      "name": "FrodoTestResourceType13",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147437,
      "description": "Frodo Test Resource Type Fourteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091866049,
      "name": "FrodoTestResourceType14",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "119b291c-40b3-4b1e-8d84-c2a561a2cb1f",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684545571229,
      "description": "Frodo Test Resource Type Fifteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091866177,
      "name": "FrodoTestResourceType15",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3c5f13af-ca17-403e-b47d-d15263cce954",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696104686172,
      "description": "Frodo Test Resource Type Two",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696104686172,
      "name": "FrodoTestResourceType2",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "ab5fb0da-8fe8-4f48-be05-aba822aa23bb",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696104686597,
      "description": "Frodo Test Resource Type Four",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696104686597,
      "name": "FrodoTestResourceType4",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "e219144d-8d94-47b6-8789-3a7b820d6cde",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696104686739,
      "description": "Frodo Test Resource Type Five",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696104686739,
      "name": "FrodoTestResourceType5",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "cef1897f-1be5-4025-beed-a155605e2f83",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696104686937,
      "description": "Frodo Test Resource Type Seven",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696104686937,
      "name": "FrodoTestResourceType7",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3d66c934-9bab-4363-973b-f5502245decc",
    },
    {
      "actions": {
        "GRANT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030586,
      "description": "The built-in OAuth2 Scope Resource Type for OAuth2policy-provided scope.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661536,
      "name": "OAuth2 Scope",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
        "*",
      ],
      "uuid": "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b",
    },
    {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661706,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
  ],
  "resultCount": 12,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`ResourceTypesApi putResourceType() 1: Update existing resource type [cef1897f-1be5-4025-beed-a155605e2f83 - FrodoTestResourceType5] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696104686739,
  "description": "Frodo Test Resource Type Five",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696104687657,
  "name": "FrodoTestResourceType5",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "cef1897f-1be5-4025-beed-a155605e2f83",
}
`;

exports[`ResourceTypesApi putResourceType() 2: Update non-existing resource type [05e5fdb6-435e-43d9-b707-c73f7f347358 - FrodoTestResourceType6] 1`] = `
{
  "code": 404,
  "message": "Resource Type 05e5fdb6-435e-43d9-b707-c73f7f347358 does not exist in realm /alpha",
  "reason": "Not Found",
}
`;
